--- a/app/src/main/res/layout/activity_laundry_main.xml
+++ b/app/src/main/res/layout/activity_laundry_main.xml
@@ -95,6 +95,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/laundryTransaction"
                 android:foreground="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:layout_width="0dp"
