--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -2,37 +2,47 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
+    android:layout_width="380dp"
     android:layout_height="650dp"
-    android:background="#1572A1"
     android:orientation="vertical"
-    android:layout_gravity="center">
-
-    <ImageView
-        android:id="@+id/iconPopup"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+    android:layout_gravity="center"
+    android:background="@drawable/backgroundmainpopup">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/edittextdetaillaundry"
+        android:id="@+id/constraintTop"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/iconPopup"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginTop="12dp"
         android:id="@+id/constraintAbout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iconPopup"
-        android:layout_marginTop="20dp">
+        app:layout_constraintTop_toBottomOf="@+id/constraintTop">
 
         <TextView
-            android:id="@+id/txtAbout"
+            android:id="@+id/txtNamaLaundry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="About"
+            android:text="Nama Laundry"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20dp"
@@ -50,9 +60,9 @@
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.118"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/txtAbout" />
+            app:layout_constraintTop_toTopOf="@+id/txtNamaLaundry" />
 
         <TextView
             android:id="@+id/Alamat"
@@ -61,12 +71,12 @@
             android:layout_marginTop="36dp"
             android:layout_marginLeft="40dp"
             android:paddingLeft="10dp"
-            android:background="@drawable/edittextrgsshape"
+            android:background="@drawable/edittextdetaillaundry"
             android:textColor="@color/black"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/txtAlamat"
-            app:layout_constraintTop_toTopOf="@+id/txtAbout" />
+            app:layout_constraintTop_toTopOf="@+id/txtNamaLaundry" />
 
         <TextView
             android:id="@+id/txtTelp"
@@ -78,7 +88,7 @@
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.12"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtAlamat" />
 
@@ -88,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="40dp"
-            android:background="@drawable/edittextrgsshape"
+            android:background="@drawable/edittextdetaillaundry"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:paddingLeft="10dp"
@@ -106,7 +116,7 @@
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.125"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtTelp" />
 
@@ -116,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="40dp"
-            android:background="@drawable/edittextrgsshape"
+            android:background="@drawable/edittextdetaillaundry"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:textAlignment="textStart"
@@ -154,7 +164,7 @@
             android:layout_height="90dp"
             android:layout_marginTop="30dp"
             android:paddingLeft="5dp"
-            android:background="@drawable/edittextrgsshape"
+            android:background="@drawable/edittextdetaillaundry"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:text="asdasdas"
@@ -165,14 +175,29 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    <!--<TextView
+        android:id="@+id/namePopup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="NAMA LAUNDRY"
+        android:textAlignment="center"
+        android:textSize="24dp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/txtAbout"/>-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/contstraintPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintServices"
-        android:layout_marginTop="20dp">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/txtPrice"
@@ -195,7 +220,7 @@
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.115"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtPrice" />
 
@@ -203,10 +228,10 @@
             android:id="@+id/Kg"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginTop="36dp"
+            android:background="@drawable/edittextdetaillaundry"
             android:paddingLeft="5dp"
-            android:background="@drawable/edittextrgsshape"
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -222,7 +247,7 @@
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.125"
+            app:layout_constraintHorizontal_bias="0.049"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtKg" />
 
@@ -230,10 +255,10 @@
             android:id="@+id/Satuan"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/edittextdetaillaundry"
             android:paddingLeft="5dp"
-            android:background="@drawable/edittextrgsshape"
             android:textColor="@color/white"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -242,32 +267,32 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-    <!--<TextView
-        android:id="@+id/namePopup"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="NAMA LAUNDRY"
-        android:textAlignment="center"
-        android:textSize="24dp"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/txtAbout"/>-->
-
-    <Button
-        android:id="@+id/btnPopup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Order"
-        android:textColor="@color/black"
-        android:textSize="20dp"
+        android:background="@drawable/belakangbuttonorder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.137" />
+        app:layout_constraintTop_toBottomOf="@+id/contstraintPrice"
+        app:layout_constraintVertical_bias="1.0">
+
+        <Button
+            android:id="@+id/btnPopup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Order"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.137" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
