--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditUser">
+    tools:context=".EditUser"
+    android:background="#1572A1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintProfile"
         android:layout_width="409dp"
         android:layout_height="219dp"
         android:layout_marginTop="20dp"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
             android:id="@+id/txtUserNama"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:background="@drawable/edittextrgsshape"
+            android:background="@drawable/edittextshape"
             android:hint="Nama"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,21 +49,22 @@
             android:id="@+id/txtUserPhone"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:background="@drawable/edittextrgsshape"
+            android:background="@drawable/edittextshape"
             android:hint="No Telp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.83" />
+            app:layout_constraintTop_toBottomOf="@+id/txtUserNama"
+            app:layout_constraintVertical_bias="0.73" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
+    <android.widget.Button
         android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/buttonsave"
         android:text="Save"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
